--- a/style.scss
+++ b/style.scss
@@ -32,6 +32,10 @@ a {
   display: none;
 }
 
+.close {
+  display: none;
+}
+
 ul {
   list-style: none;
 }
@@ -103,8 +107,8 @@ ul {
 section .container .even-columns {
   display: flex;
   justify-content: space-between;
-  
-  .main-text {
+
+  .main-text2 {
     max-width: 600px;
     h1 {
       font-size: 4rem;
@@ -143,31 +147,37 @@ section .container .even-columns {
   }
 
   .section2-list {
-    width: 550px;
+    width: 450px;
 
     ul li {
-      display: flex;
-      gap: 20px;
+      // display: flex;
+      // gap: 20px;
       padding-bottom: 1rem;
 
-      span {
-        background-color: var(--BrightRed);
-        padding: 8px 23px;
-        border-radius: 50px;
-        color: var(--VaryLightGray);
-        font-weight: 600;
-      }
-
-      h3 {
-        font-size: 1rem;
-        color: var(--DarkBlue);
+      .flex-number {
+        display: flex;
+        align-items: center;
+        gap: 10px;
         padding-bottom: 1rem;
-      }
 
+        span {
+          background-color: var(--BrightRed);
+          padding: 8px 23px;
+          border-radius: 50px;
+          color: var(--VaryLightGray);
+          font-weight: 600;
+        }
+
+        h3 {
+          font-size: 1rem;
+          color: var(--DarkBlue);
+        }
+      }
       p {
-        font-size: 1.1rem;
+        font-size: 1rem;
         color: var(--DarkGrayishBlue);
-        padding-bottom: 1rem;
+        padding-bottom: 2rem;
+        line-height: 1.5rem;
       }
     }
   }
@@ -213,7 +223,8 @@ section .container .even-columns {
 
   .container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: 300px 400px 300px;
+   gap: 100px;
 
     .column1 .logo-container {
       padding-bottom: 4rem;
@@ -228,7 +239,10 @@ section .container .even-columns {
         margin-right: 1rem;
       }
     }
-
+.flex{
+  display: flex;
+  justify-content: space-around;
+}
     .column2 {
       ul li {
         padding-bottom: 1rem;
@@ -236,6 +250,10 @@ section .container .even-columns {
         a {
           color: var(--VaryLightGray);
         }
+      }
+
+      :hover{
+        color: var(--BrightRed);
       }
     }
 
@@ -247,9 +265,14 @@ section .container .even-columns {
           color: var(--VaryLightGray);
         }
       }
+      :hover{
+        color: var(--BrightRed);
+      }
     }
 
     .column4 {
+
+      position: relative;
       form input {
         border-radius: 50px;
         border: none;
@@ -259,6 +282,17 @@ section .container .even-columns {
       ::placeholder {
         color: rgb(159, 158, 158);
       }
+
+      .error{
+        position: absolute;
+        display: none;
+        color: red;
+        font-size: 10px;
+        top: 70px;
+        left: 20px;
+      }
+
+
       p {
         font-size: 0.7rem;
         padding-top: 3rem;
@@ -309,7 +343,7 @@ section .container .even-columns {
 .image-content {
   position: relative;
   row-gap: 5px;
-  padding: 25px 0;
+  padding: 10px 0;
 }
 .overlay {
   position: absolute;
@@ -317,7 +351,7 @@ section .container .even-columns {
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: var(--BrightRed);
+  // background-color: var(--BrightRed);
   border-radius: 25px 25px 0 25px;
 }
 .overlay::before,
@@ -328,7 +362,7 @@ section .container .even-columns {
   bottom: -40px;
   height: 40px;
   width: 40px;
-  background-color: var(--BrightRed);
+  // background-color: var(--BrightRed);
 }
 .overlay::after {
   border-radius: 0 25px 0 0;
@@ -343,11 +377,11 @@ section .container .even-columns {
   padding: 3px;
 }
 .card-image .card-img {
-  height: 100%;
-  width: 100%;
+  height: 70%;
+  width: 70%;
   object-fit: cover;
   border-radius: 50%;
-  border: 4px solid var(--BrightRed);
+  // border: 2px solid var(--BrightRed);
 }
 .name {
   font-size: 18px;
@@ -411,25 +445,24 @@ section .container .even-columns {
 }
 
 @media (max-width: 768px) {
-
   body {
     font-family: "Be Vietnam Pro", sans-serif;
     font-size: 14px;
     background: url("./images/Vector.svg");
     background-repeat: no-repeat;
-    background-size: 650px;
-    background-position:50px -100px;
-
-    
+    background-size: 530px;
+    background-position: 80px -90px;
+    overflow-x: hidden;
+    .primary-header {
+      padding-bottom: 2rem;
+    }
   }
   .container {
     max-width: 350px;
     margin: 0 auto;
-
-    
   }
 
-  .primary-header .container .logo1{
+  .primary-header .container .logo1 {
     width: 150px;
   }
 
@@ -444,98 +477,272 @@ section .container .even-columns {
     }
   }
 
+  .close {
+    display: none;
+    position: absolute;
+    right: 30px;
+    top: 50px;
+  }
+
+  .hide {
+    display: none;
+  }
+
+  .show {
+    display: block;
+  }
+
+  #msg{
+    display: block;
+    position:absolute;
+    top: 70px;
+    left: 50px;
+    
+  }
+
+  .valid{
+    color: lime;
+
+  }
+
+  .invalid{
+    color: red;
+    
+  }
+
   .primary-navigation {
-    display: none;
-  }
+    position: absolute;
+    top: 100px;
+    left: 50px;
+    background-color: white;
+    padding: 2rem 8rem;
+    box-shadow: -7px 7px 24px -16px rgba(66, 68, 90, 1);
 
-  .button-main{
-    display: none;
-  }
+    ul {
+      display: flex;
+      flex-direction: column;
+      // align-items: flex-start;
+      // justify-content: flex-start;
+      gap: 1.5rem;
+      list-style: none;
 
-  
+      li {
+        font-size: 1em;
+        font-weight: 700;
+        margin: 0;
 
-  section .container .even-columns {
-    display: flex;
-    flex-direction: column-reverse;
-
-
-    .main-text {
-      max-width: 400px;
-      text-align: center;
-      h1 {
-        font-size: 2rem;
-        margin-bottom: 1rem;
-        color: var(--DarkBlue);
-        padding-top: 0;
-      }
-      
-  
-      p {
-        font-size: 1.1rem;
-        color: var(--DarkGrayishBlue);
-        max-width: 400px;
-        margin-bottom: 2rem;
-        line-height: 1.8rem;
-      }
-  
-      
-    }
-  
-    .image {
-      background: url("./images/illustration-intro.svg");
-      background-repeat: no-repeat;
-      background-size: 400px;
-      background-position: -20px 0px;
-      height: 450px;
-      width: 400px;
-    }
-  
-    .section2-list {
-      width: 550px;
-  
-      ul li {
-        display: flex;
-        gap: 20px;
-        padding-bottom: 1rem;
-  
-        span {
-          background-color: var(--BrightRed);
-          padding: 8px 23px;
-          border-radius: 50px;
-          color: var(--VaryLightGray);
-          font-weight: 600;
-        }
-  
-        h3 {
-          font-size: 1rem;
+        a {
           color: var(--DarkBlue);
-          padding-bottom: 1rem;
         }
-  
+      }
+    }
+  }
+
+  .button-main {
+    display: none;
+  }
+
+  section .container {
+    .even-columns {
+      display: flex;
+      flex-direction: column-reverse;
+
+      .main-text {
+        max-width: 400px;
+        text-align: center;
+        h1 {
+          font-size: 2.5rem;
+          margin-bottom: 1rem;
+          color: var(--DarkBlue);
+          padding-top: 0;
+        }
+
         p {
           font-size: 1.1rem;
           color: var(--DarkGrayishBlue);
-          padding-bottom: 1rem;
+          margin-bottom: 0.6rem;
+          line-height: 1.8rem;
+        }
+      }
+
+      .image {
+        background: url("./images/illustration-intro.svg");
+        background-repeat: no-repeat;
+        background-size: 400px;
+        background-position: -20px 20px;
+        height: 380px;
+        width: 380px;
+      }
+    }
+  }
+
+  section {
+    padding-top: 5rem;
+    .container {
+      .even-columns2 {
+        flex-direction: column;
+        .main-text2 {
+          max-width: 400px;
+          text-align: center;
+
+          h2 {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+            color: var(--DarkBlue);
+          }
+          p {
+            font-size: 1rem;
+            color: var(--DarkGrayishBlue);
+            margin-bottom: 0.6rem;
+            line-height: 1.8rem;
+          }
+        }
+
+        .section2-list {
+          padding-top: 2rem;
+          max-width: 350px;
+
+          ul {
+            li {
+              display: block;
+
+              .flex-number {
+                display: flex;
+                align-items: center;
+                gap: 0px;
+                padding-bottom: 1rem;
+                h3 {
+                  width: 100%;
+                  padding-bottom: 0;
+                  background-color: var(--VeryPaleRed);
+                  padding: 0.6rem 0.5rem;
+                }
+              }
+            }
+          }
         }
       }
     }
   }
-  
-  section .container .even-columns2 {
-    flex-direction: column;
+         
+          
+          .bg-orange {
+      
+            padding: 5rem 0;
+            .container {
+              display: block;
+            text-align: center;
+            }
+          
+            h2 {
+              
+              font-size: 2.5rem;
+              max-width: 350px;
+             
+            }
+        
+          }
 
-    .main-text{
+          .bg-black {
+            padding: 3rem 0;
+            text-align: center;
+            position: relative;
+          
+            .container {
+              display: flex;
+              flex-direction: column-reverse;
+              gap: 40px;
+          
+          
+              .column1 {
+              display: flex;
+              flex-direction: column-reverse;
+              align-items: center;
+              justify-content: center;
+              gap: 40px;
 
-    h2 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      color: var(--DarkBlue);
-    }
-    p{
-      font-family: .7rem;
-    }
+              .logo-container {
+                padding-bottom: 2rem;
+                img {
+                  width: 120px;
+                }
+              }
+          
+               .list {
+                ul li {
+                  display: inline-block;
+                  padding-top: 2rem;
+                  
+                }
+                
+                li:not(:last-child){
+                   margin-right: 2rem;
 
-  }
-  }
+                }
+              }
 
+            }
+
+            .flex{
+              display: flex;
+              justify-content: space-around;
+
+            }
+          
+              .column2 {
+                ul li {
+                  padding-bottom: 1rem;
+          
+                  a {
+                    color: var(--VaryLightGray);
+                  }
+                }
+              }
+
+
+          
+              .column3 {
+                ul li {
+                  padding-bottom: 1rem;
+          
+                  a {
+                    color: var(--VaryLightGray);
+                  }
+                }
+              }
+          
+              .column4 {
+                form input {
+                  border-radius: 50px;
+                  border: none;
+                  padding: 0.8rem 1.6rem;
+                  font-size: 0.8rem;
+                  margin-bottom: 3rem;
+                }
+                ::placeholder {
+                  color: rgb(159, 158, 158);
+                }
+
+                .error{
+                  position: absolute;
+                  display: none;
+                  color: red;
+                  font-size: 12px;
+                  top: 70px;
+                  left: 40px;
+                }
+                p {
+                  font-size: 0.7rem;
+                  padding-top: 1rem;
+                  color: var(--VaryLightGray);
+                  position: absolute;
+                  top: 580px;
+                  left: 30px;
+                  transform: translateX(20%);
+
+                }
+              }
+            }
+          }
+        
 }
