--- a/style.scss
+++ b/style.scss
@@ -39,7 +39,7 @@ a {
 ul {
   list-style: none;
 }
-.button {
+.btn {
   background-color: var(--BrightRed);
   border: none;
   color: var(--VaryLightGray);
@@ -507,7 +507,7 @@ section .container .even-columns {
 
   .invalid{
     color: red;
-    
+
   }
 
   .primary-navigation {
