--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ ul {
   font-weight: 600;
   -webkit-box-shadow: 1px 19px 29px -13px #f35506;
   box-shadow: 1px 19px 29px -13px #f35506;
+  cursor: pointer;
 }
 
 .button:hover {
@@ -312,15 +313,6 @@ section .container .even-columns .section2-list ul li p {
   color: #9f9e9e;
 }
 
-.bg-black .container .column4 .error {
-  position: absolute;
-  display: none;
-  color: red;
-  font-size: 10px;
-  top: 70px;
-  left: 20px;
-}
-
 .bg-black .container .column4 p {
   font-size: 0.7rem;
   padding-top: 3rem;
@@ -536,8 +528,11 @@ section .container .even-columns .section2-list ul li p {
   #msg {
     display: block;
     position: absolute;
-    top: 70px;
+    top: 60px;
     left: 50px;
+  }
+  #form .inputBox {
+    position: relative;
   }
   .valid {
     color: lime;
@@ -545,16 +540,16 @@ section .container .even-columns .section2-list ul li p {
   .invalid {
     color: red;
   }
-  .primary-navigation {
+  .primary-header .container .primary-navigation {
     position: absolute;
     top: 100px;
-    left: 50px;
+    left: 25px;
     background-color: white;
     padding: 2rem 8rem;
     -webkit-box-shadow: -7px 7px 24px -16px #42445a;
             box-shadow: -7px 7px 24px -16px #42445a;
   }
-  .primary-navigation ul {
+  .primary-header .container .primary-navigation ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -565,12 +560,13 @@ section .container .even-columns .section2-list ul li p {
     gap: 1.5rem;
     list-style: none;
   }
-  .primary-navigation ul li {
+  .primary-header .container .primary-navigation ul li {
     font-size: 1em;
     font-weight: 700;
-    margin: 0;
+    margin-left: 0;
   }
-  .primary-navigation ul li a {
+  .primary-header .container .primary-navigation ul li a {
+    margin-left: 0;
     color: var(--DarkBlue);
   }
   .button-main {
@@ -731,31 +727,24 @@ section .container .even-columns .section2-list ul li p {
     color: var(--VaryLightGray);
   }
   .bg-black .container .column4 form input {
+    width: 60%;
     border-radius: 50px;
     border: none;
     padding: 0.8rem 1.6rem;
     font-size: 0.8rem;
     margin-bottom: 3rem;
   }
-  .bg-black .container .column4 ::-webkit-input-placeholder {
+  .bg-black .container .column4 form ::-webkit-input-placeholder {
     color: #9f9e9e;
   }
-  .bg-black .container .column4 :-ms-input-placeholder {
+  .bg-black .container .column4 form :-ms-input-placeholder {
     color: #9f9e9e;
   }
-  .bg-black .container .column4 ::-ms-input-placeholder {
+  .bg-black .container .column4 form ::-ms-input-placeholder {
     color: #9f9e9e;
   }
-  .bg-black .container .column4 ::placeholder {
+  .bg-black .container .column4 form ::placeholder {
     color: #9f9e9e;
-  }
-  .bg-black .container .column4 .error {
-    position: absolute;
-    display: none;
-    color: red;
-    font-size: 12px;
-    top: 70px;
-    left: 40px;
   }
   .bg-black .container .column4 p {
     font-size: 0.7rem;
